[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/components/Enemy.gd" type="Script" id=1]
[ext_resource path="res://scenes/models/boar.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/components/Path_Finder.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/tools/Viewport.gd" type="Script" id=4]
[ext_resource path="res://scenes/fonts/Roboto_Bold.tres" type="DynamicFont" id=5]
[ext_resource path="res://src/tools/3DSprite_Viewport.gd" type="Script" id=6]

[sub_resource type="CapsuleShape" id=1]
radius = 2.3
height = 6.0

[sub_resource type="SphereShape" id=2]
radius = 60.0

[node name="Enemy" type="KinematicBody" groups=[
"Enemies",
]]
input_ray_pickable = false
collision_layer = 4
collision_mask = 7
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5.15, 0 )
shape = SubResource( 1 )

[node name="Search_Timer" type="Timer" parent="."]
autostart = true

[node name="Path_Finder" parent="." instance=ExtResource( 3 )]

[node name="Recruit_Label" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12.1183, 0 )
visible = false
cast_shadow = 0
pixel_size = 0.02
billboard = 1
script = ExtResource( 6 )

[node name="Viewport" type="Viewport" parent="Recruit_Label"]
size = Vector2( 510, 76 )
transparent_bg = true
render_target_v_flip = true
script = ExtResource( 4 )

[node name="Label" type="Label" parent="Recruit_Label/Viewport"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 5 )
text = "Press E to Recruit"

[node name="boar" parent="." instance=ExtResource( 2 )]

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 2 )

[node name="Attack_Timer" type="Timer" parent="."]
one_shot = true

[node name="Attack_Positiions" type="Spatial" parent="."]

[node name="Pos1" type="Spatial" parent="Attack_Positiions"]

[node name="Position3D" type="Position3D" parent="Attack_Positiions/Pos1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6 )

[node name="Pos2" type="Spatial" parent="Attack_Positiions"]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0 )

[node name="Position3D" type="Position3D" parent="Attack_Positiions/Pos2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6 )

[node name="Pos3" type="Spatial" parent="Attack_Positiions"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )

[node name="Position3D" type="Position3D" parent="Attack_Positiions/Pos3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6 )

[node name="Pos4" type="Spatial" parent="Attack_Positiions"]
transform = Transform( -0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, -0.707107, 0, 0, 0 )

[node name="Position3D" type="Position3D" parent="Attack_Positiions/Pos4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6 )

[node name="Pos5" type="Spatial" parent="Attack_Positiions"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="Position3D" type="Position3D" parent="Attack_Positiions/Pos5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6 )

[node name="Pos6" type="Spatial" parent="Attack_Positiions"]
transform = Transform( -0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, 0, 0, 0 )

[node name="Position3D" type="Position3D" parent="Attack_Positiions/Pos6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6 )

[node name="Pos7" type="Spatial" parent="Attack_Positiions"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )

[node name="Position3D" type="Position3D" parent="Attack_Positiions/Pos7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6 )

[node name="Pos8" type="Spatial" parent="Attack_Positiions"]
transform = Transform( 0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 0, 0 )

[node name="Position3D" type="Position3D" parent="Attack_Positiions/Pos8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6 )

[connection signal="timeout" from="Search_Timer" to="." method="_on_Search_Timer_timeout"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
